--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(342deg, #734f21, transparent);
+    background: linear-gradient(342deg, #76562f, transparent);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -132,68 +132,88 @@ body {
     }
 }
 /* COFFEE MENU PAGE */
+
+.coffee-card{
+    position: relative;
+    width: 30%;
+    border: #371E08;
+    border-width: 0.5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: auto;
+    text-align: center;  
+}
+
+.coffee-card img{
+    width: 100%;
+    object-fit:cover;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    height:30%;
+}
+
 .dropdown {
-    display: inline-block;
+    display: block;
+    width: auto;
     position: relative;
   }
 
   /* Dropdown Button */
-.dropbtn {
+
+.dropbtn{
     background-color: #CCC0B6;
     color: #371E08;
     padding: 16px;
     font-size: 15px;
-    border: none;
+    border-color:#948578;
     cursor: pointer;
     font-family: comfortaa;
-    border-radius: 5px;
-   
+    border-radius: 5px; 
   }
   
+
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
     background-color: #dccec2;
   }
 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    width: 100%;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    border-radius: 5px;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content option {
-    color: #371E08;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
  
+  .counter {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.counter h2 {
+    width: 40px;
+    border: 0;
+    line-height: 20px;
+    font-size: 25px;
+    text-align: center;
+    background: transparent;
+    color: #371E08;
+    appearance: none;
+    outline: 0;
+}
+.counter button {
+    display: block;
+    font-size: 30px;
+    padding: 0 10px;
+    cursor: pointer;
+    color: #371E08;
+    background-color: #CCC0B6;
+    user-select: none;
+    width: 40px;
+    border-width: 0.5px;
+    border-color:#948578;
+}
+
+.counter button:hover{
+    background-color: #dccec2;
   }
 
-.dropdown-content option:hover 
-   {background-color: #dccec2}
-
-.coffee-card{
-    border: #371E08;
-    border-width: 0.5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-}
-
-.coffee-card img{
-    width: 100%;
-
-}
-
-.add-to-cart{
+  .add-to-cart{
     background-color: #371E08;
     padding: 15px 40px;
     font-size: 20px;
@@ -203,68 +223,8 @@ body {
     font-weight: 600;
     color: #CCC0B6;
     border-radius: 5px;
-    
-    
 }
 
 .add-to-cart:hover {
     opacity: 0.8;
-  }
-
-  .product-quantity {
-    position:absolute;
-    width: 10rem;
-    display: block;
-    z-index: 1;
-  }
-
-  input {
-    max-width: 2rem;
-    margin: 0;
-    padding: 0.75rem 0;
-    text-align: center;
-    border-top: 1px solid #CCC0B6;
-    border-left: 1px solid #CCC0B6;
-    border-bottom: 1px solid #CCC0B6;
-    border-right: 0;
-  }
-  
-  .quantity-selectors-container {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .quantity-selectors {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .quantity-selectors button {
-    -webkit-appearance: none;
-    appearance: none;
-    margin: 0;
-    border-radius: 0;
-    border: 0.5px solid #371E08;
-    background-color: #CCC0B6;
-    color: #371E08;
-  }
-  
-  .quantity-selectors button:first-child {
-    border-bottom: 0;
-  }
-  
-  .quantity-selectors button:hover {
-    cursor: pointer;
-  }
-  
-  .quantity-selectors button[disabled="disabled"] {
-    cursor: not-allowed;
-  }
-  
-  .quantity-selectors button[disabled="disabled"] span {
-    opacity: 0.5;
   }
