--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ body {
     color: #371E08;
     position: absolute;
     left: 90%;
-    top: 45%;
+    top: 42%;
   }
 
    
@@ -305,7 +305,7 @@ body {
   }
   .description h4 {
     font-weight: 300;
-    margin-top: 62px;
+    margin-top: 80px;
     color: #86939E;
   }
 
@@ -314,7 +314,7 @@ body {
     align-items: center;
     justify-content: center;
     position: absolute;
-    bottom: 42%;
+    bottom: 45%;
     left: 34%;
 }
 .counter-check h2{
@@ -341,7 +341,18 @@ body {
     border-color:#948578;
 }
 
-.total-price {
+.subtotal{
+  text-align: center;
+  font-size: 25px;
+  color: #371E08;
+  font-weight: 300;
+  position: absolute;
+  left: 50;
+  padding-left: 24px;
+  top: 70%;
+}
+
+.amount {
     text-align: center;
     font-size: 25px;
     color: #371E08;
