--- a/css/style.scss
+++ b/css/style.scss
@@ -173,7 +173,7 @@ body {
     cursor: pointer;
     font-family: comfortaa;
     border-radius: 5px; 
-    width:40%;
+    width:70%;
   }
   
 
@@ -236,42 +236,42 @@ body {
   }
 
   
-@media screen and (max-width: 400px){
-    .topnav{
-      width: 100%;
-    }
-    .coffee-card{
-      font-size: 10px;
-      width: max-content;
-      flex-basis: content;
+@media screen and (max-width: 480px){
+   
+    .coffee-card {
+      margin: 10px;
+      img {height: 20vh;  
+      }
+      h1{
+        font-size: 20px;
+      }
     }
     .dropbtn{
-    width: 30vw;
-    font-size: 10px;
+      width: 38vw;
+      font-size: 7px;
+      height: 5vh;
     }
 }
 
 /* YOUR BAG PAGE */
-
-.item {
-    margin: auto;
-    width: 40%;
-    background-color: #F6EDE5;   
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
    
 .cart-row {
   display: flex;
-  flex-direction: row;
+  margin: auto;
+  width: fit-content;
+  background-color: #F6EDE5;   
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;
+
   img{
     width: 20vw;
     margin: 10px;
-    max-height: 45vh;
+    max-height: 30vh;
     object-fit: cover;
   }
   .description {
     color: #371E08;
-    margin: 10px 30px;
+    margin: 10px 20px;
     .title{
       h2, h3{
         display: inline;
@@ -334,6 +334,10 @@ body {
         .subtotal {
            margin-right: 80px;
         }
-        }
-        
+        }      
     }
+
+
+   
+    
+   
