--- a/css/style.scss
+++ b/css/style.scss
@@ -266,7 +266,6 @@ body {
   img{
     width: 20vw;
     margin: 10px;
-    max-height: 30vh;
     object-fit: cover;
   }
   .description {
@@ -337,7 +336,60 @@ body {
         }      
     }
 
+    hr {
+      background-color: #371E08;
+      color: #371E08;
+      height: 2px;
+      width: 55VW;
+     }
+  
+    .total-to-pay{
+      color: #371E08;
+      text-align: center;
+      font-size: 30px;
+      margin-top: 25px;
+      p{
+        display: inline;
+       
+      }
+      .total{
+        margin-right: 60px;
+      }
+      .total-number{
+        margin-left: 30vw;
+      }
+    }
 
-   
-    
-   
+  .terms{
+    text-align: center;
+    color: #371E08;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+   .check-out-btn{
+    text-align: center;
+    background-color: #371E08;
+    padding: 15px 40px;
+    font-size: 20px;
+    border: none;
+    font-family: comfortaa;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    a{
+    text-decoration: none;
+    color: #CCC0B6;
+   }
+}
+
+.check-out-btn:hover{
+   opacity: 0.8;
+ }
+
+   @media screen and (max-width: 480px){
+    hr{
+      width: 90%;
+    }
+   }
