--- a/css/style.scss
+++ b/css/style.scss
@@ -139,119 +139,127 @@ body {
 .content-section{
   display: flex;
   flex-wrap: wrap;
-}
-.coffee-card{
+  .product-card{
     width: 30%;
     border: #371E08;
     border-width: 0.5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;  
-    margin: 30px;
+    margin: 20px 15px;
     flex: 1 0 40%;
-}
-
-
-.coffee-card img{
-  width: 100%;
-  object-fit: cover;
-  max-height: 210px;
-  // photo size is w4054 h4064
-}
-
-.dropdown{
-    display: block;
-    margin-bottom: 20px;
+    img{
+      width: 100%;
+      object-fit: cover;
+      max-height: 210px;
+    }
+    p{
+      font-size: 20px;
+    }
+    .dropdown{
+      display: block;
+      margin-bottom: 20px;
+    }
+  
+   
+  .dropbtn{
+      background-color: #CCC0B6;
+      color: #371E08;
+      padding: 16px;
+      font-size: 15px;
+      border-color:#948578;
+      cursor: pointer;
+      font-family: comfortaa;
+      border-radius: 5px; 
+      width:70%;
+    }
+    
+  
+    /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus{
+      background-color: #dccec2;
+    }
+  
+   
+  .counter{
+      width: 100%;
+      margin: 20px auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
   }
-
- 
-.dropbtn{
-    background-color: #CCC0B6;
-    color: #371E08;
-    padding: 16px;
-    font-size: 15px;
-    border-color:#948578;
-    cursor: pointer;
-    font-family: comfortaa;
-    border-radius: 5px; 
-    width:70%;
+  .counter h2{
+      width: 40px;
+      border: 0;
+      line-height: 20px;
+      font-size: 25px;
+      text-align: center;
+      background: transparent;
+      color: #371E08;
+      appearance: none;
+      outline: 0;
+  }
+  .counter button{
+      display: block;
+      font-size: 30px;
+      padding: 0 10px;
+      cursor: pointer;
+      color: #371E08;
+      background-color: #CCC0B6;
+      user-select: none;
+      width: 40px;
+      border-width: 0.5px;
+      border-color:#948578;
   }
   
-
-  /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus{
-    background-color: #dccec2;
+  .counter button:hover{
+      background-color: #dccec2;
+    }
+  
+    .add-to-cart{
+      background-color: #371E08;
+      padding: 15px 40px;
+      font-size: 20px;
+      border: none;
+      cursor: pointer;
+      font-family: comfortaa;
+      font-weight: 600;
+      color: #CCC0B6;
+      border-radius: 5px;
+      margin-bottom: 20px;
+  }
+  
+  .add-to-cart:hover{
+      opacity: 0.8;
+    }
+  
   }
 
- 
-.counter{
-    width: 100%;
-    margin: 20px auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.counter h2{
-    width: 40px;
-    border: 0;
-    line-height: 20px;
-    font-size: 25px;
-    text-align: center;
-    background: transparent;
-    color: #371E08;
-    appearance: none;
-    outline: 0;
-}
-.counter button{
-    display: block;
-    font-size: 30px;
-    padding: 0 10px;
-    cursor: pointer;
-    color: #371E08;
-    background-color: #CCC0B6;
-    user-select: none;
-    width: 40px;
-    border-width: 0.5px;
-    border-color:#948578;
+
 }
 
-.counter button:hover{
-    background-color: #dccec2;
-  }
-
-  .add-to-cart{
-    background-color: #371E08;
-    padding: 15px 40px;
-    font-size: 20px;
-    border: none;
-    cursor: pointer;
-    font-family: comfortaa;
-    font-weight: 600;
-    color: #CCC0B6;
-    border-radius: 5px;
-    margin-bottom: 20px;
-}
-
-.add-to-cart:hover{
-    opacity: 0.8;
-  }
 
   
 @media screen and (max-width: 480px){
-   
-    .coffee-card {
+  .content-section{
+    .product-card {
       margin: 10px;
-      img {height: 20vh;  
+      img {height: 12vh;  
       }
       h1{
-        font-size: 20px;
+        font-size: 15px;
       }
+      p{
+        font-size: 10px;
+      }
+     .dropbtn{
+        width: 38vw;
+        font-size: 7px;
+        height: 5vh;
     }
-    .dropbtn{
-      width: 38vw;
-      font-size: 7px;
-      height: 5vh;
     }
+  } 
 }
+    
 
 /* YOUR BAG PAGE */
    
