--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,8 @@ body {
 }
 .content-section .product-card .dropdown-flavor {
   justify-content: center;
+  margin-bottom: 32px;
+  margin-top: 22px;
 }
 .content-section .product-card .dropbtn {
   background-color: #CCC0B6;
@@ -164,16 +166,6 @@ body {
   font-family: comfortaa;
   border-radius: 5px;
   width: 70%;
-}
-.content-section .product-card .dropbtn-deals {
-  background-color: #CCC0B6;
-  color: #371E08;
-  padding: 16px;
-  font-size: 15px;
-  border-color: #948578;
-  cursor: pointer;
-  font-family: comfortaa;
-  border-radius: 5px;
 }
 .content-section .product-card .dropbtn:hover, .content-section .product-card .dropbtn:focus {
   background-color: #dccec2;
@@ -377,6 +369,100 @@ hr {
   hr {
     width: 90%;
   }
+}
+.promo-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.promo-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: 20px 15px;
+  justify-content: center;
+}
+.promo-card img {
+  width: 30vw;
+  object-fit: cover;
+  max-height: fit-content;
+}
+.promo-card .heading {
+  text-align: center;
+}
+.promo-card .heading .choose-deal-btn {
+  background-color: #f4efeb;
+  color: #371E08;
+  padding: 16px;
+  margin: 10px 25px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+  font-family: comfortaa;
+  border-radius: 5px;
+  text-align: center;
+}
+.promo-card .heading .dropdown-flavor {
+  margin-bottom: 32px;
+  margin-top: 22px;
+}
+.promo-card .heading .dropdown-flavor .dropbtn-deals {
+  background-color: #CCC0B6;
+  color: #371E08;
+  padding: 16px;
+  margin: 0px 25px;
+  font-size: 15px;
+  border-color: #948578;
+  cursor: pointer;
+  font-family: comfortaa;
+  border-radius: 5px;
+}
+.promo-card .heading .dropdown-flavor .counter-deals {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.promo-card .heading .dropdown-flavor .counter-deals h2 {
+  width: 40px;
+  border: 0;
+  line-height: 20px;
+  font-size: 25px;
+  text-align: center;
+  background: transparent;
+  color: #371E08;
+  appearance: none;
+  outline: 0;
+}
+.promo-card .heading .dropdown-flavor .counter-deals button {
+  display: block;
+  font-size: 20px;
+  padding: 0 10px;
+  cursor: pointer;
+  color: #371E08;
+  background-color: #CCC0B6;
+  user-select: none;
+  width: 40px;
+  border-width: 0.5px;
+  border-color: #948578;
+}
+.promo-card .heading .dropdown-flavor .counter-deals button:hover {
+  background-color: #dccec2;
+}
+.promo-card .heading .add-to-cart {
+  background-color: #371E08;
+  padding: 15px 40px;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+  font-family: comfortaa;
+  font-weight: 600;
+  color: #CCC0B6;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+.promo-card .heading .add-to-cart:hover {
+  opacity: 0.8;
 }
 
 /*# sourceMappingURL=style.css.map */
