--- a/css/style.css
+++ b/css/style.css
@@ -487,5 +487,27 @@ hr {
     font-size: 25px;
   }
 }
+.about-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+}
+.about-section .first-p {
+  display: flex;
+}
+.about-section .first-p p {
+  font-size: 20px;
+  color: #371E08;
+  margin-top: 30px;
+  margin-left: 50px;
+}
+.about-section .first-p img {
+  margin-top: 30px;
+  margin-right: 50px;
+  width: 30%;
+  height: 50vh;
+}
 
 /*# sourceMappingURL=style.css.map */
